--- a/css/main.css
+++ b/css/main.css
@@ -1522,7 +1522,7 @@ svg.finish path {
 
 /* Footer */
 footer {
-  background: url(../img/footer.jpg) no-repeat;
+  /* background: url(../img/footer.jpg) no-repeat; */
   background-size: cover;
   background-position: bottom;
   position: relative;
