--- a/css/main.css
+++ b/css/main.css
@@ -1155,9 +1155,9 @@ input.search-field {
 
 @media only screen and (min-width: 768px) {
   .date-section {
-		height: 800px;
+		/* height: 800px; */
 		margin: 30px 0px;
-    background-image: url("../img/box.png");
+    /* background-image: url("../img/box.png"); */
     background-repeat: no-repeat;
     background-position: center;
     background-size: contain;
@@ -1170,7 +1170,7 @@ input.search-field {
   }
 
   .date-section .container {
-    padding-top: 223.5px;
+    /* padding-top: 223.5px; */
   }
 }
 
