--- a/css/main.css
+++ b/css/main.css
@@ -119,7 +119,7 @@ a {
 a:hover,
 a:active,
 a:focus {
-  color: #DBB000;
+  color: #dbb000;
   outline: none;
   text-decoration: none;
 }
@@ -222,7 +222,7 @@ a {
 }
 
 a:hover {
-  color: #DBB000;
+  color: #dbb000;
 }
 
 /*!
@@ -426,7 +426,7 @@ a:hover {
 }
 
 .card-body a:hover {
-  color: #DBB000;
+  color: #dbb000;
 }
 
 .card-image {
@@ -767,7 +767,7 @@ input.search-field {
 
 .nav-link.active,
 .nav-link:hover {
-  color: #DBB000;
+  color: #dbb000;
 }
 
 .nav-link.active:before,
@@ -775,7 +775,7 @@ input.search-field {
   content: "";
   width: 70%;
   height: 3px;
-  background: #DBB000;
+  background: #dbb000;
   display: block;
   position: absolute;
   bottom: -2px;
@@ -951,7 +951,7 @@ input.search-field {
 }
 
 .dropdown-menu .dropdown-item:hover {
-  color: #DBB000;
+  color: #dbb000;
   background: none;
 }
 
@@ -1035,7 +1035,7 @@ input.search-field {
 }
 
 .widget_calendar table a {
-  color: #DBB000;
+  color: #dbb000;
 }
 
 .widget_calendar table a:hover {
@@ -1113,14 +1113,14 @@ input.search-field {
     background: url(../img/flowers/l-side.png) no-repeat;
     background-size: contain;
     background-position: center center;
-	}
-	
-	.love-story:after {
+  }
+
+  .love-story:after {
     content: "";
     position: absolute;
     display: block;
-		top: 6.25rem;
-		right: -50px;
+    top: 6.25rem;
+    right: -50px;
     width: 165px;
     height: 75%;
     background: url(../img/flowers/r-side.png) no-repeat;
@@ -1155,8 +1155,8 @@ input.search-field {
 
 @media only screen and (min-width: 768px) {
   .date-section {
-		/* height: 800px; */
-		margin: 30px 0px;
+    /* height: 800px; */
+    margin: 30px 0px;
     /* background-image: url("../img/box.png"); */
     background-repeat: no-repeat;
     background-position: center;
@@ -1183,7 +1183,7 @@ input.search-field {
 
 .date-section__block .title--special {
   font-size: 100px;
-  line-height: 40px;
+  line-height: 55px;
   margin-bottom: 30px;
 }
 
@@ -1193,13 +1193,44 @@ input.search-field {
   }
 }
 
+.date-section .row > div:first-child {
+  border: none;
+}
+
+.date-section .row > div {
+  border-left: 3px dotted rgba(0, 0, 0, 0.75);
+}
+
+@media only screen and (max-width: 992px) {
+  .date-section .row > div:first-child {
+    padding-top: 0px;
+    border: none;
+  }
+
+  .date-section .row > div:last-child {
+    padding-bottom: 0px;
+  }
+
+  .date-section .row > div {
+    padding: 40px 0px;
+    border-top: 3px dotted rgba(0, 0, 0, 0.75);
+    border-left: none;
+  }
+}
+
 .date-section__flowers {
   max-width: 300px;
   padding-bottom: 30px;
 }
 
 .date-section__place {
-  font-family: "Playfair Display", serif;
+  /* font-family: "Playfair Display", serif; */
+  font-size: 25px;
+  margin-bottom: 40px;
+}
+
+.date-section__label {
+  /* font-family: "Playfair Display", serif; */
   font-size: 25px;
   margin-bottom: 40px;
 }
