Fix footer and add image

--- a/css/main.css
+++ b/css/main.css
@@ -1553,7 +1553,7 @@ svg.finish path {
 
 /* Footer */
 footer {
-  /* background: url(../img/footer.jpg) no-repeat; */
+  background: url(../img/footer.jpg) no-repeat;
   background-size: cover;
   background-position: bottom;
   position: relative;
