--- a/css/main.css
+++ b/css/main.css
@@ -1156,7 +1156,7 @@ input.search-field {
 @media only screen and (min-width: 768px) {
   .date-section {
     /* height: 800px; */
-    margin: 30px 0px;
+    /* margin: 30px 0px; */
     /* background-image: url("../img/box.png"); */
     background-repeat: no-repeat;
     background-position: center;
